fix(AVO-4002): remove scrollbar on request form
https://meemoo.atlassian.net/browse/AVO-4002

--- a/src/authentication/views/registration-flow/manual-registration.scss
+++ b/src/authentication/views/registration-flow/manual-registration.scss
@@ -1,4 +1,9 @@
-.m-manual-registration {
+.c-manual-registration-view {
+
+	.c-content {
+		overflow-x: hidden;
+	}
+
 	.o-form-group__label {
 		display: block;
 		margin-bottom: 5px;
